Switch to use Consumer instead of Function

--- a/results-sink/README.adoc
+++ b/results-sink/README.adoc
@@ -141,7 +141,7 @@ cd results-sink
 </project>
 ----
 
-. Add a `SpannerTemplate`, a Results class and a `@Bean` for the function (the bold parts are the additions):
+. Add a `SpannerTemplate`, a Results class and a `@Bean` for the consumer (the bold parts are the additions):
 +
 .src/main/java/com.example.resultssink/ResultsSinkApp.java
 [source,subs=+quotes]
@@ -154,11 +154,10 @@ import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.cloud.gcp.data.spanner.core.SpannerTemplate;
 import org.springframework.context.annotation.Bean;
 import org.springframework.messaging.Message;
-import org.springframework.messaging.support.MessageBuilder;
 import org.springframework.cloud.gcp.data.spanner.core.mapping.Column;
 import org.springframework.cloud.gcp.data.spanner.core.mapping.PrimaryKey;
 import org.springframework.cloud.gcp.data.spanner.core.mapping.Table;
-import java.util.function.Function;
+import java.util.function.Consumer;
 import java.util.UUID;*
 
 @SpringBootApplication
@@ -184,12 +183,12 @@ public class ResultsSinkApp {
 	}*
 
 	*@Bean
-	public Function<Message<String>, Message<String>> sink() {
+	public Consumer<Message<String>> sink() {
 		return (in) -> {
 			String name = ""+in.getHeaders().get("ce-image-name");
 			Results r = new Results(UUID.randomUUID(), name, in.getPayload());
 			this.spannerTemplate.insert(r);
-			return MessageBuilder.withPayload("Processed -> " + r.id + " : " + name).build();
+			System.out.println("Processed -> " + r.id + " : " + name);
 		};
 	}*
 
